--- a/TeduShop.Web/bower.json
+++ b/TeduShop.Web/bower.json
@@ -9,7 +9,6 @@
     "fastclick": "~1.0.6",
     "slimScroll": "~1.3.7",
     "font-awesome": "~5.5.0",
-    "toastr": "~2.1.3",
-    "select2": "~4.0.5"
+    "toastr": "~2.1.3"
   }
 }
