--- a/TeduShop.Data/TeduShop.Data.csproj
+++ b/TeduShop.Data/TeduShop.Data.csproj
@@ -72,6 +72,10 @@
     <Compile Include="Migrations\201811281259057_updateProductTable.Designer.cs">
       <DependentUpon>201811281259057_updateProductTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812121258044_updated1.cs" />
+    <Compile Include="Migrations\201812121258044_updated1.Designer.cs">
+      <DependentUpon>201812121258044_updated1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ErrorRepository.cs" />
@@ -114,6 +118,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201811281259057_updateProductTable.resx">
       <DependentUpon>201811281259057_updateProductTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812121258044_updated1.resx">
+      <DependentUpon>201812121258044_updated1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
