--- a/TeduShop.Web/TeduShop.Web.csproj
+++ b/TeduShop.Web/TeduShop.Web.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Infrastructure\Core\PaginationSet.cs" />
     <Compile Include="Infrastructure\Extensions\EntityExtensions.cs" />
     <Compile Include="Mappings\AutoMapperConfiguration.cs" />
+    <Compile Include="Models\FooterViewModel.cs" />
     <Compile Include="Models\PostCategoryViewModel.cs" />
     <Compile Include="Models\PostTagViewModel.cs" />
     <Compile Include="Models\PostViewModel.cs" />
@@ -5683,10 +5684,74 @@
     <Content Include="Assets\admin\libs\toastr\toastr.js" />
     <Content Include="Assets\admin\libs\toastr\toastr.min.css" />
     <Content Include="Assets\admin\libs\toastr\toastr.min.js" />
+    <Content Include="Assets\client\css\bootstrap.css" />
+    <Content Include="Assets\client\css\etalage.css" />
+    <Content Include="Assets\client\css\form.css" />
+    <Content Include="Assets\client\css\style.css" />
+    <Content Include="Assets\client\images\a-star.png" />
+    <Content Include="Assets\client\images\arrow1.png" />
+    <Content Include="Assets\client\images\arrow2.png" />
+    <Content Include="Assets\client\images\avatar.png" />
+    <Content Include="Assets\client\images\b-arrow.png" />
+    <Content Include="Assets\client\images\ba.jpg" />
+    <Content Include="Assets\client\images\baa.jpg" />
+    <Content Include="Assets\client\images\bag.jpg" />
+    <Content Include="Assets\client\images\bag1.jpg" />
+    <Content Include="Assets\client\images\bo.jpg" />
+    <Content Include="Assets\client\images\bott.jpg" />
+    <Content Include="Assets\client\images\bottle.jpg" />
+    <Content Include="Assets\client\images\ch.jpg" />
+    <Content Include="Assets\client\images\facebook.png" />
+    <Content Include="Assets\client\images\gpluse.png" />
+    <Content Include="Assets\client\images\img-sprite.png" />
+    <Content Include="Assets\client\images\label_new.png" />
+    <Content Include="Assets\client\images\logo.png" />
+    <Content Include="Assets\client\images\pi.jpg" />
+    <Content Include="Assets\client\images\pi1.jpg" />
+    <Content Include="Assets\client\images\pi2.jpg" />
+    <Content Include="Assets\client\images\pi3.jpg" />
+    <Content Include="Assets\client\images\pi4.jpg" />
+    <Content Include="Assets\client\images\pic.jpg" />
+    <Content Include="Assets\client\images\pic1.jpg" />
+    <Content Include="Assets\client\images\pic10.jpg" />
+    <Content Include="Assets\client\images\pic11.jpg" />
+    <Content Include="Assets\client\images\pic12.jpg" />
+    <Content Include="Assets\client\images\pic13.jpg" />
+    <Content Include="Assets\client\images\pic2.jpg" />
+    <Content Include="Assets\client\images\pic3.jpg" />
+    <Content Include="Assets\client\images\pic4.jpg" />
+    <Content Include="Assets\client\images\pic5.jpg" />
+    <Content Include="Assets\client\images\pic6.jpg" />
+    <Content Include="Assets\client\images\pic7.jpg" />
+    <Content Include="Assets\client\images\pic8.jpg" />
+    <Content Include="Assets\client\images\review.png" />
+    <Content Include="Assets\client\images\rss.png" />
+    <Content Include="Assets\client\images\s1.jpg" />
+    <Content Include="Assets\client\images\s2.jpg" />
+    <Content Include="Assets\client\images\s3.jpg" />
+    <Content Include="Assets\client\images\s4.jpg" />
+    <Content Include="Assets\client\images\sh.jpg" />
+    <Content Include="Assets\client\images\si1.jpg" />
+    <Content Include="Assets\client\images\si2.jpg" />
+    <Content Include="Assets\client\images\si3.jpg" />
+    <Content Include="Assets\client\images\si4.jpg" />
+    <Content Include="Assets\client\images\star.png" />
+    <Content Include="Assets\client\images\tick1.png" />
+    <Content Include="Assets\client\images\twitter.png" />
+    <Content Include="Assets\client\images\wa.jpg" />
+    <Content Include="Assets\client\images\wat.jpg" />
+    <Content Include="Assets\client\images\zoom.png" />
+    <Content Include="Assets\client\js\jquery.etalage.min.js" />
+    <Content Include="Assets\client\js\jquery.flexisel.js" />
+    <Content Include="Assets\client\js\jquery.min.js" />
+    <Content Include="Assets\client\js\jquery.wmuSlider.js" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Libs\CKFinder.dll" />
-    <Content Include="Resources\db.sql" />
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Shared\Header.cshtml" />
+    <Content Include="Views\Shared\Category.cshtml" />
+    <Content Include="Views\Shared\Layouts.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -5703,7 +5768,7 @@
     <Folder Include="app\shared\footer\" />
     <Folder Include="app\shared\navigation\" />
     <Folder Include="Assets\admin\js\pages\" />
-    <Folder Include="Assets\client\" />
+    <Folder Include="Assets\client\libs\" />
     <Folder Include="UploadedFiles\" />
   </ItemGroup>
   <ItemGroup>
@@ -5871,9 +5936,6 @@
     <Content Include="Assets\admin\libs\slimScroll\README.md" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\AdminLTE-2.3.0.zip" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Assets\admin\libs\font-awesome\.bower.json" />
     <Content Include="Assets\admin\libs\font-awesome\.github\ISSUE_TEMPLATE\bug-report.md" />
     <Content Include="Assets\admin\libs\font-awesome\.github\ISSUE_TEMPLATE\feature-request.md" />
@@ -6017,6 +6079,15 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ConnectionStrings.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="AppSettings.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\Footer.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
